--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
