--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.moodtracker">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -16,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".view.FindActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -31,10 +30,9 @@
 
         <activity
             android:name=".view.MapActivity"
-            android:label="@string/title_activity_map"></activity>
-
-        <activity android:name=".view.RequestsActivity"></activity>
-        <activity android:name=".view.mood.EditMoodEventActivity"></activity>
+            android:label="@string/title_activity_map" />
+        <activity android:name=".view.RequestsActivity" />
+        <activity android:name=".view.mood.EditMoodEventActivity" />
         <activity android:name=".view.mood.AddMoodEventActivity" />
         <activity android:name=".view.mood.MoodHistoryActivity" />
         <activity android:name=".view.FollowingActivity" />
@@ -48,8 +46,6 @@
         <activity android:name=".view.UserProfileActivty" />
         <activity android:name=".view.AddMoodEvent" />
         <activity android:name=".view.EditProfile" />
-
-
         <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
