--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    def picassoVersion = "2.71828"
+    implementation "com.squareup.picasso:picasso:$picassoVersion"
 }
 
 apply plugin: 'com.google.gms.google-services'
