--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     def picassoVersion = "2.71828"
     implementation "com.squareup.picasso:picasso:$picassoVersion"
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
