--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality.
     -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -32,7 +32,6 @@
             android:name=".view.MapActivity"
             android:label="@string/title_activity_map" />
         <activity android:name=".view.RequestsActivity" />
-        <activity android:name=".view.mood.EditMoodEventActivity" />
         <activity android:name=".view.mood.AddMoodEventActivity" />
         <activity android:name=".view.mood.MoodHistoryActivity" />
         <activity android:name=".view.FollowingActivity" />
