--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -43,7 +44,6 @@
         <activity android:name=".view.SignupActivity" />
         <activity android:name=".view.ProfileFragment" />
         <activity android:name=".view.UserProfileActivty" />
-        <activity android:name=".view.AddMoodEvent" />
         <activity android:name=".view.EditProfile" />
         <activity android:name=".view.MainActivity">
             <intent-filter>
