--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -38,11 +38,10 @@
         <activity android:name=".view.FollowingActivity" />
         <activity android:name=".view.FollowersActivity" />
         <activity android:name=".view.SearchActivity" />
-        <activity android:name=".view.ProfileActivity" />
         <activity android:name=".view.HomeActivity" />
         <activity android:name=".view.LoginActivity" />
         <activity android:name=".view.SignupActivity" />
-        <activity android:name=".view.ProfileFragment" />
+        <activity android:name=".view.ProfileViewActivity" />
         <activity android:name=".view.EditProfile" />
         <activity android:name=".view.MainActivity">
             <intent-filter>
