Clean up app flow, ui

--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -41,17 +41,17 @@
         <activity android:name=".view.FollowersActivity" />
         <activity android:name=".view.SearchActivity" />
         <activity android:name=".view.HomeActivity" />
-        <activity android:name=".view.LoginActivity" />
+        <activity android:name=".view.LoginActivity">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity android:name=".view.SignupActivity" />
         <activity android:name=".view.ProfileViewActivity" />
         <activity android:name=".view.EditProfile" />
-        <activity android:name=".view.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".view.MainActivity"/>
     </application>
 
 </manifest>
