--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -10,9 +10,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
         multiDexEnabled true
 
     }
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -42,6 +45,7 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.3.1'
+    androidTestUtil 'androidx.test:orchestrator:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.firebase:firebase-database:19.2.0'
