--- a/src/build.gradle
+++ b/src/build.gradle
@@ -25,3 +25,11 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+task clearData(type: Exec) {
+    def clearDataCommand = ['adb', 'shell', 'pm', 'clear', 'com.your.application']
+    commandLine clearDataCommand
+}
+
+
+
